<resources>
    <string name="app_name">Recycash</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="onboard_welcome_msg">Welcome</string>
    <string name="onboarding_desc_msg">Sign up for Recycash now, and exchange your plastic bottles for points!</string>
    <string name="btn_msg_register">Register</string>
    <string name="btn_msg_login">Login</string>
    <string name="content_desc_backarrow">Back to previous page</string>
    <string name="tv_login">Login</string>
    <string name="tv_login_desc">Enter your email and password.</string>
    <string name="content_desc_login_email">Enter your email</string>
    <string name="ed_email_hint">Email</string>
    <string name="ed_password_hint">Password</string>
    <string name="or">or login with</string>
    <string name="content_desc_login_google">Login using google</string>
    <string name="tv_register">Register</string>
    <string name="tv_register_desc">Please fill in the following fields</string>
    <string name="content_desc_register_name">Enter your full name here</string>
    <string name="ed_name_hint">Full name</string>
    <string name="content_desc_phone">Enter your phone number</string>
    <string name="ed_phone_hint">Phone number</string>
    <string name="msg_greeting_placeholder">Hi, user!</string>
    <string name="msg_reminder">Don\'t forget to exchange your bottle!</string>
    <string name="tv_points_count_placeholder">0</string>
    <string name="tv_your_points">Your points:</string>
    <string name="tv_scan">Scan</string>
    <string name="tv_wallet">E-Wallet</string>
    <string name="tv_voucher">Voucher</string>
    <string name="tv_more_options">More</string>
    <string name="tv_headline_article">Articles for you</string>
    <string name="content_desc_img_article">Picture of article</string>
    <string name="tv_article_placeholder">Article title</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="error_msg_articles">Failed to show articles</string>
    <string name="toolbar_scan_title">Scanning bottle</string>
    <string name="content_desc_scan_bottle">Bottle image</string>
    <string name="tv_img_source">Take the image from</string>
    <string name="btn_gallery">Gallery</string>
    <string name="btn_camera">Camera</string>
    <string name="tv_scan_reminder">Important: Make sure to take pictures with good lighting for more accurate scanning results.</string>
    <string name="btn_scan">Scan</string>
    <string name="error_permission">Did not get permission.</string>
    <string name="content_desc_scan_success">Scan successful</string>
    <string name="tv_success">Successfully earned points</string>
    <string name="tv_points">Points earned</string>
    <string name="tv_points_count">10</string>
    <string name="tv_point_ok_msg">Points will be added directly to your account</string>
    <string name="btn_msg_home">Home</string>
    <string name="btn_msg_scan">Scan again</string>
    <string name="content_desc_cover">cover image</string>
    <string name="tv_profile_name_placeholder">User</string>
    <string name="tv_profile_email_placeholder">user@example.com</string>
    <string name="tv_phone_title">Phone Number</string>
    <string name="tv_phone_number">081234567891</string>
    <string name="tv_about">About Recycash</string>
    <string name="btn_logout">Log out</string>
    <string name="tv_change_password">Change Password</string>
    <string name="tv_change_language">Change Language</string>
    <string name="title_history">History</string>
    <string name="empty_fields">Please fill out all fields</string>
    <string name="logout_confirmation">Do you want to log out?</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>
    <string name="msg_phone_number_notfound">No phone number registered.</string>
    <string name="tv_headline_about">About Recycash</string>
    <string name="tv_content_about">Recycash is a recycling application that empowers users to exchange their plastic bottles for points, subsequently redeemable for monetary rewards.</string>
    <string name="tv_recycash_team">The Recycash Team</string>
    <string name="content_desc_linkedin">linked in profile</string>
    <string name="member1">Adrian Triputra</string>
    <string name="content_member1">A304DSX2018 - Mobile Development</string>
    <string name="member2">Muhammad Rizki Adiyaksa</string>
    <string name="content_member2">M013DSX0004 - Machine Learning</string>
    <string name="member3">Muhammad Zidan Khairan</string>
    <string name="content_member3">M295DSX1584 - Machine Learning</string>
    <string name="member4">Muhammad Akmalludin Daffa</string>
    <string name="contenet_member4">M151DSX2488 - Machine Learning</string>
    <string name="member5">Muhammad Alvin Hilmy</string>
    <string name="content_member5">C125DKX4578 - Cloud Computing</string>
    <string name="member6">Putri Intan Amalia Dahlan</string>
    <string name="content_member6">C360DSY0966 - Cloud Computing</string>
    <string name="content_desc_plastic_type">Exit</string>
    <string name="tv_scan_success">Scan Successful!</string>
    <string name="tv_plastic_scan_desc">One more step! What type of plastic did you scan?</string>
    <string name="tv_plastic_type">I don\'t know the type of plastic I scanned.</string>
    <string name="tv_continue">Continue</string>
    <string name="content_desc_history">empty</string>
    <string name="tv_desc_history_empty">Hmm, looks like you still don\'t have any transactions.</string>
    <string name="tv_history_title">History</string>
    <string name="scan_failed">Scanning failed! Inputted image is not a bottle.</string>
    <string name="scan_success">Scan successful! One more step!</string>
    <string name="failed_fetch_points">Failed to fetch points.</string>
    <string name="points_success">Points added successfully!</string>
    <string name="failed_to_get_user">Failed to get user</string>
    <string name="points_added">Points added</string>
    <string name="points_exchanged">Points exchanged</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be 8–16 characters</string>
    <string name="tv_plastic_type_list_title">Plastic Types</string>
    <string name="plastic_type_title_placeholder">Plastic Type Title</string>
    <string name="cancellation_confirm">Do you want to cancel?</string>
    <string name="cancellation_message">You won\'t get any points if you leave at this phase.</string>
    <string name="cancellation_yes">Yes</string>
    <string name="cancellation_no">No</string>

    <string name="plastic_type_1">Polyethylene terephthalate</string>
    <string name="plastic_type_1_description">Water bottles, Jars, Caps</string>
    <string name="plastic_type_2">High-density polyethylene</string>
    <string name="plastic_type_2_description">Shampoo bottles, Grocery bags, Milk jugs</string>
    <string name="plastic_type_3">Polyvinyl chloride</string>
    <string name="plastic_type_3_description">Cleaning products, Pipes, Flooring</string>
    <string name="plastic_type_4">Low-density polyethylene</string>
    <string name="plastic_type_4_description">Plastic bags, Plastic films</string>
    <string name="plastic_type_5">Polypropylene</string>
    <string name="plastic_type_6">Polystyrene</string>
    <string name="plastic_type_7">Other plastics</string>
    <string name="plastic_type_5_description">Yoghurt caps, Straws, Hangers</string>
    <string name="plastic_type_6_description">Toys, Coffee cup lids, Plastic utensils</string>
    <string name="plastic_type_7_description">Baby bottles, Drinking bottles, CDs</string>
    <string name="type_1">Type 1: PETE</string>
    <string name="type_2">Type 2: HDPE</string>
    <string name="type_3">Type 3: V</string>
    <string name="type_4">Type 4: LDPE</string>
    <string name="type_5">Type 5: PP</string>
    <string name="type_6">Type 6: PS</string>
    <string name="type_7">Type 7: Other</string>
    <string name="tv_exchange_title">Exchange</string>
    <string name="gopay">GoPay</string>
    <string name="shopeepay">ShopeePay</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="ovo">OVO</string>
    <string name="dana">DANA</string>
    <string name="linkaja">LinkAja</string>
    <string name="doku">DOKU</string>
    <string name="isaku">iSaku</string>
    <string name="voucher">Voucher</string>
    <string name="kopken">KopKen</string>
    <string name="starbucks">Starbucks</string>
    <string name="pulsa">Pulsa</string>
    <string name="alfagift">Alfagift</string>
    <string name="point_1">10</string>
    <string name="point_2">20</string>
    <string name="point_3">30</string>
    <string name="point_4">40</string>
    <string name="point_5">50</string>
    <string name="point_6">60</string>
    <string name="point_7">70</string>
</resources>