<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".ui.auth.login.LoginFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/content_desc_backarrow"
        android:src="@drawable/ic_backarrow_black_32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:fontFamily="@font/font_inter_extrabold"
        android:gravity="center"
        android:text="@string/tv_login"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <TextView
        android:id="@+id/tv_login_desc"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:fontFamily="@font/font_inter"
        android:text="@string/tv_login_desc"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/content_desc_login_email"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_desc"
        app:startIconDrawable="@drawable/ic_email_black_24dp"
        app:startIconTint="?attr/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="@font/font_inter"
            android:hint="@string/ed_email_hint"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/content_desc_login_email"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:endIconMode="password_toggle"
        app:endIconTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        app:startIconDrawable="@drawable/ic_lock_black_24dp"
        app:startIconTint="?attr/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="@font/font_inter"
            android:hint="@string/ed_password_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/font_inter_extrabold"
        android:letterSpacing="0"
        android:text="@string/btn_msg_login"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="?attr/colorOnBackground"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_google_48dp"
        android:backgroundTint="?attr/backgroundColor"
        android:contentDescription="@string/content_desc_login_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />

</androidx.constraintlayout.widget.ConstraintLayout>